--- a/android/lib/resource/src/main/res/values-fi/strings.xml
+++ b/android/lib/resource/src/main/res/values-fi/strings.xml
@@ -291,6 +291,7 @@
     <string name="server_ip_overrides_reset_title">Nollaa kaikki ohitukset</string>
     <string name="set_dns_error">Järjestelmän DNS-palvelimen asettaminen ei onnistu. Lähetä ongelmaraportti.</string>
     <string name="set_firewall_policy_error">Palomuurisääntöjä ei voida käyttää. Suorita vianetsintä tai lähetä ongelmaraportti.</string>
+    <string name="setting_chip">Asetus: %1$s</string>
     <string name="settings">Asetukset</string>
     <string name="settings_account">Tili</string>
     <string name="settings_api_access">Ohjelmointirajapinnan käyttö</string>
