Align Smart routing GUI with design spec

--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -5,6 +5,11 @@ msgstr ""
 msgid "%(amount)d more..."
 msgstr ""
 
+#. This refers to the Smart Routing setting in the VPN settings view.
+#. This is displayed when both Smart Routing and DAITA features are on.
+msgid "%(daita)s: Smart routing"
+msgstr ""
+
 msgid "%(duration)s was added, account paid until %(expiry)s."
 msgstr ""
 
@@ -125,6 +130,9 @@ msgstr ""
 msgid "Disable"
 msgstr ""
 
+msgid "Disable anyway"
+msgstr ""
+
 msgid "Disconnect"
 msgstr ""
 
@@ -243,6 +251,9 @@ msgid "SECURE CONNECTION"
 msgstr ""
 
 msgid "Settings"
+msgstr ""
+
+msgid "Smart routing"
 msgstr ""
 
 msgid "System default"
@@ -1935,6 +1946,10 @@ msgid "IPv4 is always enabled and the majority of websites and applications use 
 msgstr ""
 
 msgctxt "vpn-settings-view"
+msgid "Is automatically enabled with %(daita)s, makes it possible to use %(daita)s with any server by using multihop. This might increase latency."
+msgstr ""
+
+msgctxt "vpn-settings-view"
 msgid "It does this by allowing network communication outside the tunnel to local multicast and broadcast ranges as well as to and from these private IP ranges:"
 msgstr ""
 
@@ -2065,7 +2080,7 @@ msgid "%(wireguard)s settings"
 msgstr ""
 
 msgctxt "wireguard-settings-view"
-msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed. Please consider this if you want to enable %(daita)s."
+msgid "Hides patterns in your encrypted VPN traffic. Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
 msgstr ""
 
 msgctxt "wireguard-settings-view"
@@ -2078,6 +2093,15 @@ msgstr ""
 
 msgctxt "wireguard-settings-view"
 msgid "MTU"
+msgstr ""
+
+#. Warning text in a dialog that is displayed after a setting is toggled.
+msgctxt "wireguard-settings-view"
+msgid "Not all our servers are %(daita)s-enabled. In order to use the internet, you might have to select a new location after disabling, or you can continue using %(daita)s with Smart routing."
+msgstr ""
+
+msgctxt "wireguard-settings-view"
+msgid "Not all our servers are %(daita)s-enabled. Smart routing allows %(daita)s to be used at any location. It does this by using multihop in the background to route your traffic via the closest %(daita)s-enabled server first."
 msgstr ""
 
 msgctxt "wireguard-settings-view"
@@ -2134,11 +2158,6 @@ msgctxt "wireguard-settings-view"
 msgid "This allows access to %(wireguard)s for devices that only support IPv6."
 msgstr ""
 
-#. Warning text in a dialog that is displayed after a setting is toggled.
-msgctxt "wireguard-settings-view"
-msgid "This feature isn’t available on all servers. You might need to change location after enabling."
-msgstr ""
-
 msgctxt "wireguard-settings-view"
 msgid "This feature makes the WireGuard tunnel resistant to potential attacks from quantum computers."
 msgstr ""
@@ -2149,6 +2168,10 @@ msgstr ""
 
 msgctxt "wireguard-settings-view"
 msgid "UDP-over-TCP port"
+msgstr ""
+
+msgctxt "wireguard-settings-view"
+msgid "Use Smart routing"
 msgstr ""
 
 #. Text describing the valid port range for a port selector.
@@ -2539,6 +2562,9 @@ msgid "There is no VPN settings on your device"
 msgstr ""
 
 msgid "This address has already been entered."
+msgstr ""
+
+msgid "This feature isn’t available on all servers. You might need to change location after enabling."
 msgstr ""
 
 msgid "This field is required"
